Rename loot type registry bootstrap