@@ -1,8 +1,7 @@
 package com.github.ysbbbbbb.kaleidoscopecookery.loot;
 
 import com.github.ysbbbbbb.kaleidoscopecookery.KaleidoscopeCookery;
-import com.github.ysbbbbbb.kaleidoscopecookery.init.ModLootModifier;
-import com.google.common.collect.ImmutableSet;
+import com.github.ysbbbbbb.kaleidoscopecookery.init.ModLootTypes;
 import com.mojang.serialization.MapCodec;
 import com.mojang.serialization.codecs.RecordCodecBuilder;
 import net.minecraft.advancements.predicates.ItemPredicate;
@@ -35,12 +34,12 @@ public class AdvanceEntityMatchTool implements LootItemCondition {
 
     @Override
     public @NotNull MapCodec<? extends LootItemCondition> codec() {
-        return ModLootModifier.ADVANCE_ENTITY_MATCH_TOOL;
+        return ModLootTypes.ADVANCE_ENTITY_MATCH_TOOL;
     }
 
     @Override
     public @NotNull Set<ContextKey<?>> getReferencedContextParams() {
-        return ImmutableSet.of(LootContextParams.LAST_DAMAGE_PLAYER);
+        return Set.of(LootContextParams.LAST_DAMAGE_PLAYER);
     }
 
     @Override
@@ -53,7 +52,7 @@ public class AdvanceEntityMatchTool implements LootItemCondition {
         return false;
     }
 
-    public static Builder toolMatches(EquipmentSlot slot, ItemPredicate builder) {
-        return () -> new AdvanceEntityMatchTool(slot, builder);
+    public static Builder toolMatches(EquipmentSlot slot, ItemPredicate predicate) {
+        return () -> new AdvanceEntityMatchTool(slot, predicate);
     }
 }
